# index-audio-interface

./: .clangd  .gitignore  .gitmodules  ATTRIBUTION.md  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md  main.c
lib/tinyusb/: usb_descriptors.c
shared/lib/recursivenomad/: debug.h
uac1/: CMakeLists.txt  LICENSE.txt
uac1/lib/i2s/: audio_i2s.c
uac1/lib/i2s/include/pico/: audio_i2s.h
uac1/lib/lufa/: StdDescriptors.h
uac1/lib/recursivenomad/: debug.h
uac1/src/: main.c
uac2/: CMakeLists.txt  LICENSE.txt
uac2/lib/tinyusb/: usb_descriptors.c
uac2/src/: main.c
